2006-09-12  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/AbstractButton.java
	(AbstractButton): Initialise textIconGap field.

2006-09-11  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/FieldHelper.java (print): Print
	"volatile" when needed.

2006-09-11  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedCharacterIterator.java
	(LANGUAGE): Initialise with lower case string,
	(INPUT_METHOD_SEGMENT): Likewise,
	(READING): Likewise,
	* java/text/AttributedStringIterator.java
	(getRunLimit): Check all attributes for changes.

2006-09-11  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedCharacterIterator.java: Added @since tag, 
	renamed some variables (no underscores) and removed some spaces to
	match the common style,
	* java/text/AttributedString.java: Likewise,
	* java/text/AttributedStringIterator.java: Likewise.

2006-09-11  Gary Benson  <gbenson@redhat.com>

	* java/net/Inet4Address.java
	(FAMILY): Renamed back to AF_INET.
	(<init>, writeReplace): Reflect the above.
	* java/net/Inet6Address.java
	(FAMILY): Renamed back to AF_INET6.
	(<init>): Reflect the above.

2006-09-11  Cameron McCormack  <cam-gcc-bugzilla@aka.mcc.id.au>

	Fixes PR29010
	* java/text/AttributedString.java
	(AttributedString(AttributedCharacterIterator, int, int, 
	AttributedCharacterIterator.Attribute[])): Fixed check for defined 
	attribute.

2006-09-11  Gary Benson  <gbenson@redhat.com>

	* java/net/Inet4Address.java
	(AF_INET): Renamed to FAMILY.
	(<init>, writeReplace): Reflect the above.
	* java/net/Inet6Address.java
	(AF_INET6): Renamed to FAMILY.
	(<init>): Reflect the above.

2006-09-10  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #28867
	Originally in Kaffe: 2004-04-16  Helmer Kraemer <hkraemer@freenet.de>
	* java/net/ServerSocket.java(implAccept): Deleted socket.implCreated.
	* java/net/Socket.java: Avoid creating a redundant file descriptor.